<resources>
    <string name="app_name">Mercy-Kids-Client</string>

    <!-- 공통 -->
    <string name="confirm">확인</string>
    <string name="close">닫기</string>
    <string name="cancel">취소</string>

    <!-- 로그인 홈 화면 -->
    <string name="login_home_email_error_message">메일 형식이 올바르지 않습니다</string>
    <string name="login_home_password_error_message">잘못된 비밀번호입니다. 다시 한번 확인해주세요</string>
    <string name="login_home_email_hint">이메일 주소를 입력해주세요</string>
    <string name="login_home_password_hint">비밀번호를 입력해주세요</string>
    <string name="login_home_option_auto_login">자동로그인</string>
    <string name="login_home_login_button">로그인</string>
    <string name="login_home_google_login"><u>구글 계정으로 로그인</u></string>
    <string name="login_home_signup">회원가입</string>
    <string name="login_home_find">이메일/비밀번호 찾기</string>
    <string name="login_home_failed_google_signin">구글 로그인에 실패했습니다. 잠시 뒤 다시 이용해주세요.</string>

    <!-- 회원가입 화면 -->
    <string name="sign_up_header_welcome">환영해요</string>
    <string name="sign_up_header_title">회원가입하기</string>
    <string name="sign_up_toolbar_title">회원가입하기</string>
    <string name="sign_up_contents_name_title">이름</string>
    <string name="sign_up_contents_name_hint">이름을 입력해주세요</string>
    <string name="sign_up_contents_name_error">최대 100자까지 입력할 수 있습니다</string>
    <string name="sign_up_contents_email_title">이메일(아이디)</string>
    <string name="sign_up_contents_email_hint">email@naver.com</string>
    <string name="sign_up_contents_email_button">인증메일 발송</string>
    <string name="sign_up_contents_email_button_send">발송 완료</string>
    <string name="sign_up_contents_email_button_resend">재발송</string>
    <string name="sign_up_contents_email_error">올바른 이메일 주소를 입력하세요</string>
    <string name="sign_up_contents_email_confirm_hint">인증번호 n자리를 입력해주세요</string>
    <string name="sign_up_contents_email_confirm_expired">제한 시간이 초과되었습니다. 다시 시도해주세요</string>
    <string name="sign_up_contents_email_confirm_button">확인</string>
    <string name="sign_up_contents_email_confirm_button_ok">인증완료!</string>
    <string name="sign_up_contents_email_confirm_error">60:00</string>
    <string name="sign_up_contents_password_title">비밀번호(영문,숫자조합 최소 6자 이상)</string>
    <string name="sign_up_contents_password_hint">비밀번호를 입력해주세요(영문,숫자조합 최소 6자 이상)</string>
    <string name="sign_up_contents_password_error">올바른 비밀번호를 입력하세요</string>
    <string name="sign_up_contents_password_confirm_hint">비밀번호 확인</string>
    <string name="sign_up_contents_password_confirm_error">비밀번호가 일치하지 않습니다</string>
    <string name="sign_up_contents_birth_title">생년월일</string>
    <string name="sign_up_contents_birth_hint">생년월일 입력</string>
    <string name="sign_up_contents_phone_title">휴대전화번호</string>
    <string name="sign_up_contents_phone_hint">01012345678</string>
    <string name="sign_up_terms_agree">이용약관 동의</string>
    <string name="sign_up_personal_info_agree">개인정보 이용동의</string>

    <!-- 이메일/비밀번호 찾기 화면 -->
    <string name="find_account_password">비밀번호 찾기</string>
    <string name="find_account_email">이메일 찾기</string>
    <string name="find_email_text_input_hint">가입한 이메일 주소를 입력해주세요</string>
    <string name="find_account_title">이메일/비밀번호 찾기</string>
    <string name="find_password_description">! 가입에 사용하신 이메일 주소를 입력하세요.\n해당 이메일 주소로 비밀번호 재설정 링크를 보내드립니다.</string>
    <string name="find_password_text_input_hint">가입한 이메일 주소를 입력해주세요</string>
    <string name="find_email_exist">가입된 이메일입니다.</string>
    <string name="find_email_empty">입력한 정보와\n일치하는 이메일이 없습니다.\n다시 한번 확인해 주세요 :)</string>

    <!-- 설문조사 화면 -->
    <string name="question_form_who">누가 이용을 할까요?!</string>
    <string name="question_form_name">이름을 알려주세요.</string>
    <string name="question_form_age">나이를 알려주세요.</string>
    <string name="question_form_reason">이용하는 이유는 무엇인가요?</string>
    <string name="question_form_favorite_character">좋아하는 캐릭터를 선택해주세요!\n3개 이상 선택해주세요.</string>
    <string name="question_form_missing_input">아직 프로필이 완성되지 않았습니다. 확인해주세요.</string>

</resources>