<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="viewModel"
            type="com.mercy.kids.client.login.viewmodel.LoginHomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/login_home_checkbox_bg"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login_home_option_auto_login"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.mercy.kids.component.edittext.loginhome.LoginHomeTextInput
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox"
            app:textInputErrorEnabled="true"
            app:textInputErrorMessage="@string/login_home_email_error_message"
            app:textInputHint="@string/login_home_email_hint" />

        <com.mercy.kids.component.edittext.loginhome.LoginHomeTextInput
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/btn_login_home_comfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:textInputErrorEnabled="false"
            app:textInputErrorMessage="@string/login_home_password_error_message"
            app:textInputHint="@string/login_home_password_hint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_home_comfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/login_home_login_button"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="20dp"
            app:backgroundTint="#00be90"
            app:cornerRadius="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_login_home_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_home_google"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_home_google_login"
            android:textSize="15sp"
            android:textColor="#323232"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_home_comfirm"
            app:rippleColor="#99AAAAAA" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_home_sign_up"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/login_home_signup"
            android:textColor="#323232"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            android:onClick="@{(v) -> viewModel.onSignUpButtonClicked.invoke()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/materialButton2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="#99AAAAAA" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton2"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login_home_find"
            android:textColor="#323232"
            android:textStyle="bold"
            android:onClick="@{(v) -> viewModel.onFindAccountButtonClicked.invoke()}"
            app:layout_constraintBottom_toBottomOf="@+id/btn_login_home_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_login_home_sign_up"
            app:layout_constraintTop_toTopOf="@+id/btn_login_home_sign_up"
            app:rippleColor="#99AAAAAA" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
