<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="parentViewModel"
            type="com.mercy.kids.client.login.viewmodel.FindAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_height="wrap_content"
        android:padding="24dp">
        
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_find_password_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/find_password_description"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            android:textSize="14sp"
            android:textColor="#5b6980"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_input_find_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.mercy.kids.component.edittext.signup.SignUpTextInput
            android:id="@+id/text_input_find_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:textInputTitle="@string/sign_up_contents_email_title"
            app:textInputHint="@string/find_password_text_input_hint"
            app:textInputType="password"
            app:layout_constraintTop_toBottomOf="@+id/tv_find_password_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_find_password_confirm"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_find_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:backgroundTint="#00be90"
            app:cornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_input_find_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
