<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mercy.kids.client.login.viewmodel.FindAccountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_find_account"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="#64e3a7"
            app:title="@string/find_account_title"
            app:titleTextColor="#205072"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tl_find_account_tab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_find_account_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#64e3a7"
            app:tabIndicatorColor="#205072"
            app:tabTextColor="#205072"
            app:tabSelectedTextColor="#205072"
            app:tabMode="fixed"
            app:tabTextAppearance="@style/Widget.FindAccount.TabItemText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_find_account"
            app:layout_constraintBottom_toTopOf="@id/vp_find_account_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_find_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/find_account_email"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_find_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/find_account_password" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_find_account_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_find_account_tab"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
